--- a/.github/workflows/exoflow.cloud-cd.yml
+++ b/.github/workflows/exoflow.cloud-cd.yml
@@ -16,7 +16,7 @@ concurrency:
   cancel-in-progress: false
 
 env:
-  WORKING_DIR: ${{ github.workspace }}/apps/exoflow.cloud
+  WORKING_DIR: ${{ github.workspace }}
 
 jobs:
   package:
@@ -46,7 +46,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version-file: ${{ env.WORKING_DIR }}/.nvmrc
+          node-version-file: apps/exoflow.cloud/.nvmrc
           cache: ${{ steps.detect-package-manager.outputs.manager }}
 
       - name: Setup Pages
