--- a/.github/workflows/exoflow.cloud-cd.yml
+++ b/.github/workflows/exoflow.cloud-cd.yml
@@ -28,13 +28,12 @@ jobs:
 
       - name: Detect package manager
         id: detect-package-manager
-        working-directory: ${{ env.WORKING_DIR }}
         run: |
-          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
+          if [ -f "${{ env.WORKING_DIR }}/yarn.lock" ]; then
             echo "manager=yarn" >> $GITHUB_OUTPUT
             echo "command=install" >> $GITHUB_OUTPUT
             exit 0
-          elif [ -f "${{ github.workspace }}/package.json" ]; then
+          elif [ -f "${{ env.WORKING_DIR }}/package.json" ]; then
             echo "manager=npm" >> $GITHUB_OUTPUT
             echo "command=ci" >> $GITHUB_OUTPUT
             exit 0
