--- a/.github/workflows/exoflow.cloud-ci.yaml
+++ b/.github/workflows/exoflow.cloud-ci.yaml
@@ -19,7 +19,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Setup Node.js
+    - name: Setup Node
       uses: actions/setup-node@v4
       with:
         node-version-file: apps/exoflow.cloud/.nvmrc
