--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -1,4 +1,4 @@
-name: Build devcontainer
+name: Devcontainer (build and push)
 
 on:
   pull_request:
@@ -8,15 +8,39 @@ on:
     branches:
     - main
   workflow_dispatch:
+    inputs:
+      as-latest:
+        description: Push as the latest tag
+        type: boolean
+        required: false
+        default: false
+
+env:
+  TAGS: ${{ github.repository }}-devcontainer:${{ github.head_ref || github.ref_name }}${{ (github.ref == 'refs/heads/main' || inputs.as-latest) && format(',{0}-devcontainer:latest', github.repository) || ''}}
 
 jobs:
   devcontainer:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Build docker image
+      - name: Print env
         run: |
-          docker build -t devcontainer .
+          echo ${{ env.TAGS }}
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: exokomodo
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: ${{ env.TAGS }}
