--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,9 @@
                 "ms-vscode.cpptools-extension-pack",
                 "ms-azuretools.vscode-docker",
                 "ms-vscode.makefile-tools",
-                "DavidAnson.vscode-markdownlint"
+                "DavidAnson.vscode-markdownlint",
+                "Vue.volar",
+                "Vue.vscode-typescript-vue-plugin"
             ]
         }
     },
