feat: devcontainer has bun, header, footer
Added header
Added footer
General CSS upkeep
Loads .zshrc into volume mount
Added template pages for misc

Closes #22

--- a/.devcontainer/docker-compose.devcontainer.yml
+++ b/.devcontainer/docker-compose.devcontainer.yml
@@ -3,6 +3,7 @@ services:
     volumes:
       # Mount SSH dir to enable git
       - ~/.ssh:/root/.ssh
+      - ~/.zshrc:/root/.zshrc
 
     # [Optional] Required for ptrace-based debuggers like C++, Go, and Rust
     cap_add:
