Improve python configure flags (#21)
Added the following:
- `--without-system-libmpdec`
- ` --enable-loadable-sqlite-extensions`
- `--with-ensurepip=install`
- `--with-computed-gotos`

--- a/.github/workflows/exoflow.cloud-cd.yml
+++ b/.github/workflows/exoflow.cloud-cd.yml
@@ -73,3 +73,25 @@ jobs:
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
+
+  pass:
+    name: Pass?
+    runs-on: ubuntu-latest
+    if: always()
+    needs:
+    - package
+    - deploy
+
+    env:
+      RESULT: ${{ (needs.package.result == 'failure' || needs.package.result == 'failure') && 'failure' || 'success' }}
+
+    steps:
+    - name: Pass
+      if: ${{ env.RESULT != 'failure' }}
+      run: |
+        echo "[PASS] Linting" >> ${GITHUB_STEP_SUMMARY}
+
+    - name: Fail
+      if: ${{ env.RESULT == 'failure' }}
+      run: |
+        echo "[FAIL] Linting" >> ${GITHUB_STEP_SUMMARY}
