--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -43,6 +43,8 @@ jobs:
         with:
           push: true
           tags: ${{ env.TAGS }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
   pass:
     name: Pass?
     runs-on: ubuntu-latest
