--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,6 +11,9 @@ on:
 defaults:
   run:
     shell: bash
+env:
+  JS_EXEC: npm
+  JS_INSTALL: ci
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -22,9 +25,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version-file: .nvmrc
-      - name: Install dependencies
-        run: |
-          npm ci
       - name: Lint
         run: |
           make lint
