jamesaorson-patch-1: Add docs

--- a/.github/workflows/pr-label.yml
+++ b/.github/workflows/pr-label.yml
@@ -23,6 +23,7 @@ jobs:
             autobutler:
               - 'apps/autobutler-app/**'
               - 'apps/autobutler.ai/**'
+              - 'docs/autobutler/**'
       - name: Add "autobutler" label if applicable
         if: ${{ steps.filter.outputs.autobutler == 'true' }}
         uses: actions/github-script@v6
