fix: more CI pathing

--- a/.github/workflows/pr-label.yml
+++ b/.github/workflows/pr-label.yml
@@ -15,14 +15,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Check for changes in apps/autobutler
+      - name: Check for changes in apps/ab-public/autobutler.ai
         uses: dorny/paths-filter@v3
         id: filter
         with:
           filters: |
             autobutler:
-              - 'apps/autobutler-app/**'
-              - 'apps/autobutler.ai/**'
+              - 'apps/ab-public/autobutler-app/**'
+              - 'apps/ab-public/autobutler.ai/**'
               - 'docs/autobutler/**'
       - name: Add "autobutler" label if applicable
         if: ${{ steps.filter.outputs.autobutler == 'true' }}
