--- a/apps/ab-home/autobutler-infra/ansible/playbooks/setup_ca.yml
+++ b/apps/ab-home/autobutler-infra/ansible/playbooks/setup_ca.yml
@@ -7,7 +7,7 @@
     ca_dir: /etc/rancher/k3s/certs
     ca_cert_path: "{{ ca_dir }}/ca.crt"
     ca_key_path: "{{ ca_dir }}/ca.key"
-    cert_validity_days: 3650  # 10 years
+    cert_validity_days: 3650 # 10 years
     k3s_server_cert_path: "{{ ca_dir }}/server.crt"
     k3s_server_key_path: "{{ ca_dir }}/server.key"
     k3s_client_cert_path: "{{ ca_dir }}/client.crt"
@@ -20,7 +20,7 @@
         path: "{{ ca_dir }}"
         state: directory
         mode: "0755"
-      when: inventory_hostname == 'pi1'
+      when: inventory_hostname == 'hostname0'
 
     - name: Generate CA private key
       shell: |
@@ -28,7 +28,7 @@
         chmod 600 {{ ca_key_path }}
       args:
         creates: "{{ ca_key_path }}"
-      when: inventory_hostname == 'pi1'
+      when: inventory_hostname == 'hostname0'
 
     - name: Generate CA certificate
       shell: |
@@ -39,7 +39,7 @@
           -subj "/CN=k3s-ca"
       args:
         creates: "{{ ca_cert_path }}"
-      when: inventory_hostname == 'pi1'
+      when: inventory_hostname == 'hostname0'
 
     - name: Generate server private key
       shell: |
@@ -47,24 +47,24 @@
         chmod 600 {{ k3s_server_key_path }}
       args:
         creates: "{{ k3s_server_key_path }}"
-      when: inventory_hostname == 'pi1'
+      when: inventory_hostname == 'hostname0'
 
     - name: Generate server CSR
       shell: |
         openssl req -new -key {{ k3s_server_key_path }} \
           -out /tmp/server.csr \
           -subj "/CN=k3s-server" \
-          -addext "subjectAltName=DNS:kubernetes,DNS:kubernetes.default,DNS:kubernetes.default.svc,DNS:kubernetes.default.svc.cluster.local,IP:{{ hostvars['pi1']['ansible_host'] }},IP:10.43.0.1"
-      when: inventory_hostname == 'pi1'
+          -addext "subjectAltName=DNS:kubernetes,DNS:kubernetes.default,DNS:kubernetes.default.svc,DNS:kubernetes.default.svc.cluster.local,IP:{{ hostvars['hostname0']['ansible_host'] }},IP:10.43.0.1"
+      when: inventory_hostname == 'hostname0'
 
     - name: Create SANs configuration file
       copy:
         content: |
           [SAN]
-          subjectAltName=DNS:kubernetes,DNS:kubernetes.default,DNS:kubernetes.default.svc,DNS:kubernetes.default.svc.cluster.local,IP:{{ hostvars['pi1']['ansible_host'] }},IP:10.43.0.1
+          subjectAltName=DNS:kubernetes,DNS:kubernetes.default,DNS:kubernetes.default.svc,DNS:kubernetes.default.svc.cluster.local,IP:{{ hostvars['hostname0']['ansible_host'] }},IP:10.43.0.1
         dest: "{{ sans_file }}"
         mode: "0644"
-      when: inventory_hostname == 'pi1'
+      when: inventory_hostname == 'hostname0'
 
     - name: Generate server certificate
       shell: |
@@ -78,7 +78,7 @@
           -extfile {{ sans_file }}
       args:
         creates: "{{ k3s_server_cert_path }}"
-      when: inventory_hostname == 'pi1'
+      when: inventory_hostname == 'hostname0'
 
     - name: Generate client private key
       shell: |
@@ -86,14 +86,14 @@
         chmod 600 {{ k3s_client_key_path }}
       args:
         creates: "{{ k3s_client_key_path }}"
-      when: inventory_hostname == 'pi1'
+      when: inventory_hostname == 'hostname0'
 
     - name: Generate client CSR
       shell: |
         openssl req -new -key {{ k3s_client_key_path }} \
           -out /tmp/client.csr \
           -subj "/CN=k3s-client"
-      when: inventory_hostname == 'pi1'
+      when: inventory_hostname == 'hostname0'
 
     - name: Generate client certificate
       shell: |
@@ -106,14 +106,14 @@
           -sha256
       args:
         creates: "{{ k3s_client_cert_path }}"
-      when: inventory_hostname == 'pi1'
+      when: inventory_hostname == 'hostname0'
 
     - name: Create cert directories on worker nodes
       file:
         path: "{{ ca_dir }}"
         state: directory
         mode: "0755"
-      when: inventory_hostname != 'pi1'
+      when: inventory_hostname != 'hostname0'
 
     - name: Copy CA certificate to worker nodes
       copy:
@@ -121,7 +121,7 @@
         dest: "{{ ca_cert_path }}"
         mode: "0644"
         remote_src: yes
-      when: inventory_hostname != 'pi1'
+      when: inventory_hostname != 'hostname0'
 
     - name: Copy client certificates to worker nodes
       copy:
@@ -130,9 +130,15 @@
         mode: "0644"
         remote_src: yes
       with_items:
-        - { src: "{{ k3s_client_cert_path }}", dest: "{{ k3s_client_cert_path }}" }
-        - { src: "{{ k3s_client_key_path }}", dest: "{{ k3s_client_key_path }}" }
-      when: inventory_hostname != 'pi1'
+        - {
+            src: "{{ k3s_client_cert_path }}",
+            dest: "{{ k3s_client_cert_path }}",
+          }
+        - {
+            src: "{{ k3s_client_key_path }}",
+            dest: "{{ k3s_client_key_path }}",
+          }
+      when: inventory_hostname != 'hostname0'
 
     - name: Clean up temporary files
       file:
@@ -142,4 +148,4 @@
         - /tmp/server.csr
         - /tmp/client.csr
         - "{{ sans_file }}"
-      when: inventory_hostname == 'pi1' 
+      when: inventory_hostname == 'hostname0'
