--- a/apps/ab-home/autobutler-infra/ansible/playbooks/setup_kubeconfig.yml
+++ b/apps/ab-home/autobutler-infra/ansible/playbooks/setup_kubeconfig.yml
@@ -8,13 +8,13 @@
   tasks:
     - name: Create .kube directory
       file:
-        path: /home/brandonapol/.kube
+        path: /home/butler/.kube
         state: directory
         mode: "0755"
-        owner: brandonapol
+        owner: butler
     - name: Copy k3s.yaml to user's home
       copy:
-        content: '{{ k3s_yaml | replace(''127.0.0.1'', ''192.168.1.196'') }}'
-        dest: /home/brandonapol/.kube/config
+        content: '{{ k3s_yaml | replace(''127.0.0.1'', ''192.168.5.253'') }}'
+        dest: /home/butler/.kube/config
         owner: brandonapol
         mode: "0600"
