--- a/apps/autobutler-home/infra/ansible/playbooks/uninstall_k3s.yml
+++ b/apps/autobutler-home/infra/ansible/playbooks/uninstall_k3s.yml
@@ -8,7 +8,7 @@
   tasks:
     - name: Stop k3s service
       systemd:
-        name: "{{ 'k3s' if inventory_hostname == 'butler0' else 'k3s-agent' }}"
+        name: '{{ ''k3s'' if inventory_hostname == ''butler0'' else ''k3s-agent'' }}'
         state: stopped
       ignore_errors: true
     - name: Uninstall k3s
@@ -18,7 +18,7 @@
       ignore_errors: true
     - name: Clean up k3s directories
       file:
-        path: "{{ item }}"
+        path: '{{ item }}'
         state: absent
       with_items:
         - /etc/rancher/k3s
@@ -30,7 +30,7 @@
       ignore_errors: true
     - name: Remove k3s binaries and scripts
       file:
-        path: "{{ item }}"
+        path: '{{ item }}'
         state: absent
       with_items:
         - /usr/local/bin/k3s
@@ -40,7 +40,7 @@
       ignore_errors: true
     - name: Remove k3s systemd service
       file:
-        path: "{{ item }}"
+        path: '{{ item }}'
         state: absent
       with_items:
         - /etc/systemd/system/k3s.service
