demo: Fix up structure a bit and add stub for light with HA

--- a/src/autobutler/demo/pyproject.toml
+++ b/src/autobutler/demo/pyproject.toml
@@ -20,5 +20,5 @@ dynamic = ["dependencies"]
 dependencies = { file = "requirements.txt" }
 
 [project.scripts]
-butlerctl = "autobutler:main"
-butlerapi = "api:main"
+butlerctl = "autobutler.cli:main"
+butlerapi = "autobutler.api:main"
