--- a/src/autobutler/docker-compose.yml
+++ b/src/autobutler/docker-compose.yml
@@ -5,13 +5,16 @@ services:
   #     context: ./llm
   #     dockerfile: Dockerfile
   #   ports:
-  #     - 8081:8081
+  #     - "127.0.0.1:8081:8081"
   #   volumes:
   #     - ./llm:/app
   #   deploy:
   #     resources:
   #       limits:
-  #         memory: 4G
+  #         memory: 3G
+  #         cpus: '2'
+  #   environment:
+  #     - PATH=/usr/local/bin:$PATH
   #   restart: unless-stopped
   router:
     build:
@@ -23,8 +26,7 @@ services:
       - ./router:/app/src
     environment:
       - PATH=/usr/local/bin:$PATH
-    # environment:
-    #   - LLM_URL=http://llm:8081
+      - LLM_URL=http://llm:8081
     # depends_on:
     #   - llm
     restart: unless-stopped
@@ -42,4 +44,17 @@ services:
       - HOST=0.0.0.0
     depends_on:
       - router
+    restart: unless-stopped
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "8443:443"
+      - "8080:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/ssl:/etc/nginx/ssl
+    depends_on:
+      - ui
+      - router
+      # - llm
     restart: unless-stopped
