--- a/src/autobutler/ui/tsconfig.json
+++ b/src/autobutler/ui/tsconfig.json
@@ -3,10 +3,5 @@
   "compilerOptions": {
     "typeRoots": ["./types", "./node_modules/@types"]
   },
-  "include": [
-    "./**/*.ts",
-    "./**/*.d.ts",
-    "./**/*.tsx",
-    "./**/*.vue"
-  ]
-} 
+  "include": ["./**/*.ts", "./**/*.d.ts", "./**/*.tsx", "./**/*.vue"]
+}
