--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ logs
 .env
 .env.*
 !.env.example
+
+# SSL certificates and keys
+src/autobutler/nginx/ssl/*.crt
+src/autobutler/nginx/ssl/*.key
+src/autobutler/nginx/ssl/*.csr
