--- a/src/autobutler/docker-compose.yml
+++ b/src/autobutler/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   # llm:
   #   build:
@@ -6,13 +5,11 @@ services:
   #     dockerfile: Dockerfile
   #   ports:
   #     - "127.0.0.1:8081:8081"
-  #   volumes:
-  #     - ./llm:/app
-  #   deploy:
-  #     resources:
-  #       limits:
-  #         memory: 3G
-  #         cpus: '2'
+  #   # deploy:
+  #   #   resources:
+  #   #     limits:
+  #   #       memory: 3G
+  #   #       cpus: '2'
   #   environment:
   #     - PATH=/usr/local/bin:$PATH
   #   restart: unless-stopped
@@ -26,7 +23,7 @@ services:
       - ./router:/app/src
     environment:
       - PATH=/usr/local/bin:$PATH
-      - LLM_URL=http://llm:8081
+      - LLM_URL=http://192.168.5.236:8081/generate
     # depends_on:
     #   - llm
     restart: unless-stopped
@@ -45,16 +42,16 @@ services:
     depends_on:
       - router
     restart: unless-stopped
-  nginx:
-    image: nginx:alpine
-    ports:
-      - 8443:443
-      - 8080:80
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/ssl:/etc/nginx/ssl
-    depends_on:
-      - ui
-      - router
-      # - llm
-    restart: unless-stopped
+  # nginx:
+  #   image: nginx:alpine
+  #   ports:
+  #     - 8443:443
+  #     - 8080:80
+  #   volumes:
+  #     - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+  #     - ./nginx/ssl:/etc/nginx/ssl
+  #   depends_on:
+  #     - ui
+  #     - router
+  #     # - llm
+  #   restart: unless-stopped
