Start local run with logs

--- a/src/autobutler/router/Makefile
+++ b/src/autobutler/router/Makefile
@@ -5,7 +5,7 @@ SHELL := /bin/bash
 
 .PHONY: $(MAKECMDGOALS)
 
-PORT ?= 8080
+GIN_PORT ?= 8080
 
 router: cmd/main.go
 	go mod tidy
@@ -14,7 +14,7 @@ router: cmd/main.go
 
 run: router
 	@echo "Running router..."
-	./$< &
+	./$< | tee ./service.log &
 
 kill:
 	killall router || true
