--- a/src/autobutler/ui/Makefile
+++ b/src/autobutler/ui/Makefile
@@ -7,13 +7,13 @@ SHELL := /bin/bash
 
 JS_EXEC ?= bun
 JS_INSTALL ?= install
-export PORT ?= 8082
+export PORT ?= 3000
 
 run:
 	if ! [[ -d ./node_modules ]]; then \
 		$(JS_EXEC) $(JS_INSTALL); \
 	fi; \
-	$(JS_EXEC) run dev &
+	$(JS_EXEC) run dev | tee ./service.log &
 
 kill:
 	killall $$(lsof -i :$(PORT) | tail -n 1 | awk '{print $1}') || true
