39: Setup home assistant container

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ src/autobutler/nginx/ssl/*.crt
 src/autobutler/nginx/ssl/*.key
 src/autobutler/nginx/ssl/*.csr
 src/autobutler/router/router
+
+# Home Assistant
+src/autobutler/home-assistant/config
