--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -13,8 +13,10 @@ body:
     id: component
     attributes:
       label: Component
-      description: What component is affected by this?
+      description: What component(s) are affected by this?
+      multiple: true
       options:
+        - N/A
         - UI
         - Backend
         - LLM
@@ -28,7 +30,6 @@ body:
       label: What happened?
       description: Also, what did you expect to happen?
       placeholder: What is going on? 🔫
-      value: "Tell me dude"
     validations:
       required: true
   - type: dropdown
