--- a/.github/workflows/autobutler.ai-ci.yml
+++ b/.github/workflows/autobutler.ai-ci.yml
@@ -12,7 +12,7 @@ on:
         description: Image tag to run
         type: string
 env:
-  WORKING_DIR: ${{ github.workspace }}/src/autobutler.ai
+  WORKING_DIR: ${{ github.workspace }}/src/autobutler.ai/ui
 defaults:
   run:
     shell: bash
