update: Add issue type to issue template

--- a/.github/ISSUE_TEMPLATE/feature.yaml
+++ b/.github/ISSUE_TEMPLATE/feature.yaml
@@ -4,6 +4,7 @@ title: "[Feature]: "
 labels: ["enhancement"]
 projects: ["exokomodo/8"]
 assignees: []
+type: Feature
 body:
   - type: markdown
     attributes:
