--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -3,6 +3,7 @@ description: File a bug report.
 title: "[Bug]: "
 labels: ["bug"]
 projects: ["exokomodo/8"]
+type: Bug
 assignees: []
 body:
   - type: markdown
