--- a/src/autobutler.ai/ui/package.json
+++ b/src/autobutler.ai/ui/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "autobutler.ai/ui",
+  "name": "autobutler-ai-ui",
   "type": "module",
   "engines": {
-    "node": ">=22.8.0"
+    "node": ">=20.9.0"
   },
   "scripts": {
     "build": "nuxt build",
@@ -17,20 +17,20 @@
     "fix": "concurrently -m1 npm:fix:*"
   },
   "dependencies": {
-    "@nuxt/content": "^3.5.1",
-    "markdownlint-cli2": "^0.17.2",
-    "nuxt": "^3.15.4",
-    "vue": "latest",
-    "vue-router": "latest"
+    "@nuxt/content": "^2.13.2",
+    "markdownlint-cli2": "^0.13.0",
+    "nuxt": "^3.13.2",
+    "vue": "^3.4.38",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^1.6.3",
-    "@nuxt/eslint": "^0.7.2",
+    "@nuxt/devtools": "^1.4.2",
+    "@nuxt/eslint": "^0.5.7",
     "@svrbc/eslint-config": "^1.2.7",
-    "concurrently": "^9.1.2",
-    "eslint": "^9.16.0",
-    "prettier": "^3.5.3",
-    "typescript": "^5.8.2",
-    "vue-tsc": "^2.2.8"
+    "concurrently": "^8.2.2",
+    "eslint": "^9.10.0",
+    "prettier": "^3.3.3",
+    "typescript": "^5.5.4",
+    "vue-tsc": "^2.1.6"
   }
 }
