--- a/package.json
+++ b/package.json
@@ -21,8 +21,5 @@
     "lint:md": "markdownlint-cli2 *.{md,markdown} {src,docs,libs}/*.{md,markdown}"
   },
   "author": "ExoKomodo",
-  "license": "CC0",
-  "dependencies": {
-    "@nuxt/content": "^3.5.1"
-  }
+  "license": "CC0"
 }
