--- a/src/autobutler/backend/Makefile
+++ b/src/autobutler/backend/Makefile
@@ -22,6 +22,13 @@ run: venv/bin/butlerapi ## Run the butlerapi command
 kill: ## Kill the butlerapi command
 	@killall $$(lsof -i :$(PORT) | tail -n 1 | awk '{print $1}') || true
 
+PYTEST_ARGS ?= -vv --tb=short
+
+.PHONY: test
+test: venv/bin/butlerapi ## Run the tests
+	@. ./venv/bin/activate
+	pytest $(PYTEST_ARGS) tests/
+
 .PHONY: help
 help: ## Displays help info
 	@awk 'BEGIN {FS = ":.*##"; printf "\nUsage:\n  make \033[36m\033[0m\n"} /^[a-zA-Z_-]+:.*?##/ { printf "  \033[36m%-15s\033[0m %s\n", $$1, $$2 } /^##@/ { printf "\n\033[1m%s\033[0m\n", substr($$0, 5) } ' $(MAKEFILE_LIST)
