--- a/.github/workflows/backend-test.yml
+++ b/.github/workflows/backend-test.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install autobutler backend
         working-directory: ${{ env.WORKING_DIR }}
         run: |
-          pip install -e .
+          make venv/bin/butlerapi
       - name: Test
         working-directory: ${{ env.WORKING_DIR }}
         run: |
