--- a/.github/workflows/dotai-cd.yml
+++ b/.github/workflows/dotai-cd.yml
@@ -1,4 +1,4 @@
-name: dotai - CD
+name: autobutler.ai - CD
 on:
   push:
     branches:
@@ -10,7 +10,7 @@ on:
         type: string
 jobs:
   deploy:
-    name: dotai - Trigger Deploy
+    name: autobutler.ai - Trigger Deploy
     runs-on: ubuntu-latest
     steps:
       - name: Workflow Dispatch
@@ -20,7 +20,7 @@ jobs:
           script: |
             github.rest.actions.createWorkflowDispatch({
               owner: 'exokomodo',
-              repo: 'dotai',
+              repo: 'autobutler.ai',
               workflow_id: 'deploy.yml',
               ref: 'main',
               inputs: {
