go-rewrite: Change backend-build name
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -13,7 +13,7 @@ defaults:
   run:
     shell: bash
 jobs:
-  backend-lint:
+  backend-build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
