go-rewrite: Lint
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -28,5 +28,4 @@ jobs:
           go mod download
       - name: Build
         working-directory: ${{ env.WORKING_DIR }}
-        run: |
-          make build
+        run: make build
