cleanup: Fixup makefile a bit
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/src/autobutler/backend/.gitignore
+++ b/src/autobutler/backend/.gitignore
@@ -20,8 +20,4 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 e2e.json
-
-!build/
-build/*
-!build/.gitkeep
-
+build/
