--- a/src/autobutler/backend/Makefile
+++ b/src/autobutler/backend/Makefile
@@ -20,8 +20,9 @@ ifeq (run/build,$(firstword $(MAKECMDGOALS)))
   $(eval $(RUN_ARGS):;@:)
 endif
 
-build: ## Build backend
-	go build -o ./build ./...
+build: ## Build backend as `ab`
+	mkdir -p ./build
+	go build -o ./build/ab github.com/exokomodo/exoflow/autobutler/backend
 
 format: ## Format code
 	go fmt ./...
@@ -46,3 +47,6 @@ exercise: ## Exercise the backend chat feature
 		-X GET \
 		"http://localhost:8080/chat?prompt=How+much+milk+is+in+the+house" | tee ./e2e.json
 	killall main || true
+
+help: ## Displays help info
+	@awk 'BEGIN {FS = ":.*##"; printf "\nUsage:\n  make \033[36m\033[0m\n"} /^[a-zA-Z_-]+:.*?##/ { printf "  \033[36m%-15s\033[0m %s\n", $$1, $$2 } /^##@/ { printf "\n\033[1m%s\033[0m\n", substr($$0, 5) } ' $(MAKEFILE_LIST)
