cleanup: Do lint at top-level for golang
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/.github/workflows/dotai-cd.yml
+++ b/.github/workflows/dotai-cd.yml
@@ -9,7 +9,7 @@ on:
         description: Image tag to run
         type: string
 jobs:
-  deploy:
+  dotai-cd:
     name: autobutler.ai - Trigger Deploy
     runs-on: ubuntu-latest
     steps:
